# kopano-dspam

./: Makefile.am  Makefile.in  README  README.md  dspam.cfg  kopano-dspam  setup.py  spamd.cfg  upload.sh  zarafa-search  zarafa-search-xapian-compact.py  zarafa-spamd  zarafa-spamd-retrain
kopano_dspam/: __init__.py
patches/: datux_dspam_dotstuffing_fix.patch  datux_dspam_recipient.patch
zarafa_search/: __init__.py  plugin_solr.py  plugin_xapian.py
zarafa_spamd/: __init__.py
